--- a/manifest.json
+++ b/manifest.json
@@ -20,5 +20,38 @@
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/infoblox",
         "icon": "icon.png",
         "tags": "ipam"
+    },
+    {
+        "name": "algosec",
+        "label": "Algosec Policy Augmentation",
+        "versions": [
+            0.1
+        ],
+        "latest": 0.1,
+        "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/algosec",
+        "icon": "icon.png",
+        "tags": "security"
+    },
+    {
+        "name": "tufin",
+        "label": "Tufin Security Augmentation",
+        "versions": [
+            0.1
+        ],
+        "latest": 0.1,
+        "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/tufin",
+        "icon": "icon.png",
+        "tags": "security"
+    },
+    {
+        "name": "servicenow",
+        "label": "ServiceNow CMDB",
+        "versions": [
+            0.1
+        ],
+        "latest": 0.1,
+        "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/servicenow",
+        "icon": "icon.png",
+        "tags": "cmdb"
     }
 ]
