--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/vcenter",
         "icon": "icon.png",
-        "tags": "vmware"
+        "tags": "vmware",
+        "required_targets": ["tetration"]
     },
     {
         "name": "infoblox",
@@ -19,7 +20,8 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/infoblox",
         "icon": "icon.png",
-        "tags": "ipam"
+        "tags": "ipam",
+        "required_targets": ["tetration"]
     },
     {
         "name": "algosec",
@@ -30,7 +32,8 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/algosec",
         "icon": "icon.png",
-        "tags": "security"
+        "tags": "security",
+        "required_targets": ["tetration"]
     },
     {
         "name": "tufin",
@@ -41,7 +44,8 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/tufin",
         "icon": "icon.png",
-        "tags": "security"
+        "tags": "security",
+        "required_targets": ["tetration"]
     },
     {
         "name": "servicenow",
@@ -52,7 +56,8 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/servicenow",
         "icon": "icon.png",
-        "tags": "cmdb"
+        "tags": "cmdb",
+        "required_targets": ["tetration"]
     },
     {
         "name": "splunk",
@@ -63,6 +68,7 @@
         "latest": 0.1,
         "path": "https://github.com/techBeck03/Scratch/raw/master/ecoScripts/splunk",
         "icon": "icon.png",
-        "tags": "cmdb"
+        "tags": "cmdb",
+        "required_targets": ["tetration"]
     }
 ]
