added subtype for config items

--- a/ecoScripts/awx-tasks/awx-tasks-0.1.json
+++ b/ecoScripts/awx-tasks/awx-tasks-0.1.json
@@ -25,7 +25,8 @@
                 {
                     "name": "workflow_task_list",
                     "label": "Workflow Task List (YAML)",
-                    "type": "editor-yaml",
+                    "type": "editor",
+                    "sub_type": "yaml",
                     "environment_variable_name": "AWX_WORKFLOW_TASKS",
                     "required": true,
                     "placeholder": "",
