--- a/ecoScripts/awx-tasks/awx-tasks-0.1.json
+++ b/ecoScripts/awx-tasks/awx-tasks-0.1.json
@@ -34,6 +34,26 @@
                     "verify": false
                 }
             ]
+        },
+        {
+            "name": "workflow_vars",
+            "label": "Workflow Variables",
+            "order": 1,
+            "controls": [
+            ],
+            "items": [
+                {
+                    "name": "workflow_var_list",
+                    "label": "Workflow Var List (YAML)",
+                    "type": "editor",
+                    "sub_type": "yaml",
+                    "environment_variable_name": "AWX_WORKFLOW_VARS",
+                    "required": true,
+                    "placeholder": "",
+                    "order": 1,
+                    "verify": false
+                }
+            ]
         }
     ]
 }
