--- a/ecoScripts/awx-tasks/awx-tasks-0.1.json
+++ b/ecoScripts/awx-tasks/awx-tasks-0.1.json
@@ -28,7 +28,7 @@
                     "type": "expansion-panel",
                     "sub_type": "",
                     "dynamic_add": true,
-                    "environment_variable_name": "",
+                    "environment_variable_name": "TEMPLATE_TASK_LIST",
                     "value": "",
                     "required": true,
                     "placeholder": "",
