--- a/ecoScripts/awx-tasks/awx-tasks-0.1.json
+++ b/ecoScripts/awx-tasks/awx-tasks-0.1.json
@@ -3,7 +3,7 @@
     "type": "api",
     "configurable": true,
     "schedulable": true,
-    "docker_image": "ecohub/awx_tasks:v0.2",
+    "docker_image": "ecohub/awx_tasks:0.2",
     "config_parameters": [
         {
             "name": "workflow_tasks",
