--- a/ecoScripts/awx-tasks/awx-tasks-0.1.json
+++ b/ecoScripts/awx-tasks/awx-tasks-0.1.json
@@ -43,6 +43,7 @@
                             "sub_type": "",
                             "environment_variable_name": "TEMPLATE_NAME",
                             "value": "",
+                            "required": true,
                             "placeholder": "Select Job Template",
                             "order": 1,
                             "group": 1,
@@ -55,6 +56,7 @@
                             "sub_type": "single-range-1-10",
                             "environment_variable_name": "WORKFLOW_COUNT",
                             "value": "",
+                            "required": true,
                             "placeholder": "Run Count",
                             "order": 2,
                             "group": 1,
@@ -67,6 +69,7 @@
                             "fetch_target": "CREDENTIALS",
                             "environment_variable_name": "TEMPLATE_CREDENTIALS",
                             "value": "",
+                            "required": true,
                             "placeholder": "Credentials",
                             "popover": "Select credentials for template",
                             "order": 3,
@@ -76,10 +79,12 @@
                         {
                             "name": "inventory",
                             "label": "Inventory",
-                            "type": "text",
+                            "type": "fetch-single",
+                            "sub_type": "allow-custom",
                             "environment_variable_name": "TEMPLATE_INVENTORY",
                             "value": "",
-                            "placeholder": "Inventory name or {{ 'default' | get_env('DEPLOYMENT_ID') }}",
+                            "required": true,
+                            "placeholder": "Inventory name or _ENV_<environment var name>",
                             "popover": "Inventory name for template",
                             "order": 4,
                             "group": 1,
